<resources>
    <string name="app_name">Bai2</string>
    <string name="enter_name_hint" />
    <string name="enter_address_hint" />
    <string name="enter_phone_hint" />
    <string name="enter_note_hint" />
    <string name="Khoa" />
    <string name="Ki_thuat" />
    <string name="enter_cccd_hint" />
    <string name="enter_mssv_hint" />
    <string name="enter_email_hint" />
    <string name="enter_home_hint" />
    <string name="enter_homeNow_hint" />
</resources>